--- a/index.html
+++ b/index.html
@@ -39,9 +39,43 @@
       opacity: 0;
       transition: opacity 0.2s ease;
     }
+    #startScreen {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.8);
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      z-index: 9999;
+    }
   </style>
 </head>
 <body>
+  <div id="startScreen">
+    <h1>벽돌깨기 게임</h1>
+    <button id="startBtn" style="font-size: 20px; padding: 10px 20px;">게임 시작</button>
+  </div>
+
+  <div id="restartScreen" style="
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.8);
+  color: white;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 9999;
+">
+  <h1>게임 오버!</h1>
+  <button id="restartBtn" style="font-size: 20px; padding: 10px 20px;">다시 시작</button>
+</div>
+
+
   <canvas id="gameCanvas" width="900" height="600"></canvas>
 
   <div style="width: 900px; margin: 10px auto; text-align: center;">
