--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
   <div id="startScreen">
-    <h1>벽돌깨기 게임</h1>
+    <h1>쇼츠에서 봤던 그 게임임</h1>
     <button id="startBtn" style="font-size: 20px; padding: 10px 20px;">게임 시작</button>
   </div>
 
