--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <div id="startScreen">
     <h1>쇼츠에서 봤던 그 게임임</h1>
-    <button id="startBtn" style="font-size: 20px; padding: 10px 20px;">게임 시작</button>
+    <button id="startBtn" style="font-size: 20px; padding: 10px 20px;">시작하기기</button>
   </div>
 
   <div id="restartScreen" style="
@@ -71,8 +71,8 @@
   flex-direction: column;
   z-index: 9999;
 ">
-  <h1>게임 오버!</h1>
-  <button id="restartBtn" style="font-size: 20px; padding: 10px 20px;">다시 시작</button>
+  <h1>우르륽...애옭....애앍....우르륵.....우륽....앩옭...매앍...</h1>
+  <button id="restartBtn" style="font-size: 20px; padding: 10px 20px;">리?</button>
 </div>
 
 
