--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
   <div id="startScreen">
     <h1>쇼츠에서 봤던 그 게임임</h1>
-    <button id="startBtn" style="font-size: 20px; padding: 10px 20px;">시작하기기</button>
+    <button id="startBtn" style="font-size: 20px; padding: 10px 20px;">시작하기</button>
   </div>
 
   <div id="restartScreen" style="
